/* 
  Localizable.strings
  ChaiMobileTask

  Created by Seongwuk Park on 24/05/22.
  
*/
"appTitle" = "TO DO";
"addTask" = "Add a task";
"delete" = "Delete";
"edit" = "Edit";
"newTask" = "NEW TASK";
"noTaskMessage" = "Please try adding a new task.";
"ok" = "Ok";
"removeMessage" = "Are you sure to delete \"%@\"?";

