...
                leading:
                    Text("appTitle").font(.system(size: 17, weight: .bold)),
                trailing:
                    Button(action: {
                        viewModel.addTask(title: "newTask".localized)
                    }) {
                        Image("img_add")
                            .frame(width: 48, height: 48, alignment: .center)
                            .scaledToFit()
                    }
            )
        }
        .navigationViewStyle(.columns)
...
