...
                            Text("ok".localized)
                                .font(.system(size: 14, weight: .bold))
                                .foregroundColor(.white)
                                .frame(minWidth: 0, maxWidth: .infinity)
                                .frame(height: 60)
                        }
                        .accessibilityIdentifier("okayButton")
                        .background(Color.black)
                        .cornerRadius(20)
                        .padding(.vertical, 20)
                        .padding(.horizontal, 40)
                    }
                    .background(Color.white)
...
